# kiosk-control-panel

./: .dockerignore  .gitignore  AGENT.md  Jenkinsfile  README.md  __init__.py  fleet_permissions.py  shared.py
cloud/: Dockerfile  __init__.py  backends.py  bitting_calibration.py  bump_tower_calibration.py  calibration_trace.py  docker-entrypoint.sh  grip_calibration.py  gripper_cam_calibration.py  gripper_leds_check.py  main.py  overhead_cam_calibration.py  pickup_y_calibration.py  pyproject.toml  run_based_calibration.py  run_grouping.py
cloud/api/: __init__.py  admin_api.py  auth.py  bitting_calibration.py  bump_tower_calibration.py  calibration_trace.py  carousel_calibration.py  codex_app_server_client.py  codex_log_context.md  device_log_client.py  grip_calibration.py  gripper_cam_calibration.py  gripper_leds_check.py  log_analysis.py  logging_config.py  main.py  overhead_cam_calibration.py  pickup_y_calibration.py  run_based_calibration.py  run_grouping.py  s3_url_cache.py  testcuts.py  ws_fleet_permissions.py
cloud/api/tests/: conftest.py  test_auth.py  test_calibrations.py  test_ejection_images.py  test_health.py  test_inventory_ejection_checks_ws_handler.py  test_ping.py  test_run_grouping.py  test_status.py  test_testcuts.py  test_trace.py  test_ws_ai.py  test_ws_fleet_permissions.py  test_ws_proxy_fleet_permission.py  test_ws_proxy_stg_deployed_gate.py  test_ws_proxy_wss_key.py
cloud/web/: index.html  package-lock.json  package.json  vite.config.js
cloud/web/src/: App.jsx  index.css
cloud/web/src/components/: AppSidebar.jsx  CornerstoneViewer.jsx  (+2 more)
(+92 files in other folders)
