[project]
name = "control-panel-cloud"
version = "0.1.0"
description = "Control panel cloud app (FastAPI): REST API + static serving"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "boto3",
    "numpy",
    "opencv-python-headless",
    "httpx",
    "cachetools",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "moto[s3]",
]

[tool.pytest.ini_options]
testpaths = ["api/tests"]
